--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -60,22 +60,24 @@
     <string name="donations_thanks_dialog_title">¡Gracias!</string>
     <string name="end_time_title">Fin</string>
     <string name="fetching_location">Obteniendo ubicación\u2026</string>
-    <string name="forecast_chance_of_rain">Lluvia</string>
+    <string name="forecast_chance_of_rain">Posibilidad de lluvia</string>
     <string name="forecast_chance_of_showers">Chubascos</string>
-    <string name="forecast_chance_of_snow">Nieve</string>
+    <string name="forecast_chance_of_snow">Posibilidad de nieve</string>
     <string name="forecast_chance_of_snow_showers">Nieve</string>
-    <string name="forecast_chance_of_storm">Tormenta</string>
+    <string name="forecast_chance_of_storm">Posibilidad de tormenta</string>
     <string name="forecast_chance_of_tstorm">Tormenta eléctrica</string>
     <string name="forecast_clear">Despejado</string>
     <string name="forecast_cloudy">Nublado</string>
+    <string name="forecast_cold">Frío</string>
     <string name="forecast_drizzle">Llovizna</string>
     <string name="forecast_dust">Polvo</string>
     <string name="forecast_fair">Favorable</string>
     <string name="forecast_flurries">Ráfagas de viento</string>
     <string name="forecast_fog">Niebla</string>
     <string name="forecast_freezing_drizzle">Llovizna helada</string>
-	<string name="forecast_freezing_rain">Chubascos de nieve</string>
+    <string name="forecast_freezing_rain">Chubascos de nieve</string>
     <string name="forecast_hail">Granizo</string>
+    <string name="forecast_hot">Calor</string>
     <string name="forecast_haze">Neblina</string>
     <string name="forecast_heavy_rain">Fuerte lluvia</string>
     <string name="forecast_icy">Helado</string>
@@ -90,7 +92,7 @@
     <string name="forecast_rain">Lluvia</string>
     <string name="forecast_rain_and_snow">Lluvia y nieve</string>
     <string name="forecast_rain_showers">lluvias</string>
-	<string name="forecast_sand">Arena</string>
+    <string name="forecast_sand">Arena</string>
     <string name="forecast_scattered_showers">Chubascos dispersos</string>
     <string name="forecast_scattered_thunderstorms">Tormentas eléctricas dispersas</string>
     <string name="forecast_showers">Chubascos</string>
@@ -98,10 +100,12 @@
     <string name="forecast_smoke">Humo</string>
     <string name="forecast_snow">Nieve</string>
     <string name="forecast_snow_showers">Chubascos de nieve</string>
-	<string name="forecast_snow_storm">Tormenta de nieve</string>
+    <string name="forecast_snow_storm">Tormenta de nieve</string>
     <string name="forecast_sunny">Soleado</string>
     <string name="forecast_thunderstorm">Tormenta eléctrica</string>
-    <string name="forecast_windy">Tormenta</string>
+    <string name="forecast_thunderstorms">Tormentas eléctricas</string>
+    <string name="forecast_tornado">Tornado</string>
+    <string name="forecast_windy">Viento</string>
     <string name="changelog">Lista de cambios</string>
     <string name="just_now">Ahora mismo</string>
     <string name="loading">Cargando\u2026</string>
@@ -248,6 +252,7 @@
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" millas"</string>
     <string name="weather_feel">"Sensación real: "</string>
+    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Humedad: "</string>
     <string name="weather_no_city">No hay ciudades</string>
     <string name="weather_no_data">No hay datos meteorológicos</string>
