--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="about_author">作者:</string>
     <string name="about_version">版本:</string>
-    <string name="about_sunny">晴朗</string>
+    <string name="about_sunny">陽光明媚</string>
     <string name="about_cloudy">多雲</string>
     <string name="about_overcast">陰天</string>
     <string name="about_fog">霧</string>
@@ -26,7 +26,7 @@
     <string name="about_social">社群連結:</string>
     <string name="action_bar_selected_format">選擇: %d</string>
     <string name="app_name">Weather BZ</string>
-    <string name="applying_theme">正在套用主題\u2026</string>
+    <string name="applying_theme">正在套用主題u2026</string>
     <string name="btn_add_location">新增位置</string>
     <string name="btn_apply_theme">套用主題</string>
     <string name="btn_delete_location">刪除位置</string>
@@ -61,47 +61,51 @@
     <string name="end_time_title">結束</string>
     <string name="fetching_location">獲取您的位置\u2026</string>
     <string name="forecast_chance_of_rain">可能有雨</string>
-    <string name="forecast_chance_of_showers">陣雨機率</string>
+    <string name="forecast_chance_of_showers">降雨機率</string>
     <string name="forecast_chance_of_snow">可能有雪</string>
-    <string name="forecast_chance_of_snow_showers">陣雪</string>
+    <string name="forecast_chance_of_snow_showers">降雪機率</string>
     <string name="forecast_chance_of_storm">可能有風暴</string>
     <string name="forecast_chance_of_tstorm">雷雨</string>
-    <string name="forecast_clear">清除</string>
+    <string name="forecast_clear">晴朗</string>
     <string name="forecast_cloudy">多雲</string>
+    <string name="forecast_cold">寒冷</string>
     <string name="forecast_drizzle">細雨</string>
     <string name="forecast_dust">灰塵</string>
-    <string name="forecast_fair">公平</string>
+    <string name="forecast_fair">晴</string>
     <string name="forecast_flurries">小雪</string>
     <string name="forecast_fog">霧</string>
-    <string name="forecast_freezing_drizzle">凍毛毛雨</string>
-	<string name="forecast_freezing_rain">凍雨</string>
-    <string name="forecast_hail">冰雹</string>
+    <string name="forecast_freezing_drizzle">凍毛雨</string>
+    <string name="forecast_freezing_rain">凍雨</string>
     <string name="forecast_haze">陰霾</string>
+    <string name="forecast_hail">冰雹</string>
+    <string name="forecast_hot">炎熱</string>
     <string name="forecast_heavy_rain">大雨</string>
-    <string name="forecast_icy">冷冰冰</string>
-    <string name="forecast_light_rain">短暫時間有陽光</string>
+    <string name="forecast_icy">冰冷</string>
+    <string name="forecast_light_rain">小雨</string>
     <string name="forecast_light_snow">小雪</string>
     <string name="forecast_mist">霧</string>
     <string name="forecast_mostly_cloudy">晴間多雲</string>
     <string name="forecast_mostly_sunny">晴時多雲</string>
-    <string name="forecast_overcast">陰沉</string>
-    <string name="forecast_partly_cloudy">晴間多雲</string>
-    <string name="forecast_partly_sunny">晴間多雲</string>
+    <string name="forecast_overcast">陰天</string>
+    <string name="forecast_partly_cloudy">局部多雲</string>
+    <string name="forecast_partly_sunny">局部晴朗</string>
     <string name="forecast_rain">雨</string>
-    <string name="forecast_rain_and_snow">雨和雪</string>
+    <string name="forecast_rain_and_snow">雨夾雪</string>
     <string name="forecast_rain_showers">陣雨</string>
-	<string name="forecast_sand">沙</string>
+    <string name="forecast_sand">沙</string>
     <string name="forecast_scattered_showers">零星陣雨</string>
     <string name="forecast_scattered_thunderstorms">局部雷雨</string>
     <string name="forecast_showers">驟雨</string>
     <string name="forecast_sleet">雨雪</string>
-    <string name="forecast_smoke">吸煙</string>
+    <string name="forecast_smoke">煙霧</string>
     <string name="forecast_snow">雪</string>
     <string name="forecast_snow_showers">陣雪</string>
-	<string name="forecast_snow_storm">雪凝</string>
-    <string name="forecast_sunny">晴朗</string>
+    <string name="forecast_snow_storm">雪暴</string>
+    <string name="forecast_sunny">陽光明媚</string>
     <string name="forecast_thunderstorm">雷雨</string>
-    <string name="forecast_windy">風暴</string>
+    <string name="forecast_thunderstorms">雷暴</string>
+    <string name="forecast_tornado">龍捲風</string>
+    <string name="forecast_windy">有風</string>
     <string name="changelog">變更</string>
     <string name="just_now">剛才</string>
     <string name="loading">等待\u2026</string>
@@ -151,11 +155,11 @@
     <string name="quiet_hours_title">安靜幾小時</string>
     <string name="settings_about_title">關於</string>
     <string name="settings_category_animation">動畫</string>
-    <string name="settings_category_animation_sum">動畫類型</string>
+    <string name="settings_category_animation_sum">動畫預覽</string>
     <string name="settings_category_app_update">應用程式更新</string>
     <string name="settings_category_appearance">常見的</string>
     <string name="settings_category_appearance_sum">測量單位, 文字顏色等.</string>
-    <string name="settings_category_forecast_update">預測更新</string>
+    <string name="settings_category_forecast_update">預報更新</string>
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">MIUI支持設置(開啟/關閉, 清除數據等.)</string>
     <string name="settings_category_network">網絡設置</string>
@@ -172,13 +176,13 @@
     <string name="settings_colorize_weather_icons_title">著色圖標</string>
     <string name="settings_colorize_weather_icons_summary">設置圖標顏色文字顏色(除全白色的天氣圖標.)</string>
     <string name="settings_miui_support_summary">打開支持MIUI原生widgets</string>
-    <string name="settings_miui_support_title">MIUI widgets支持</string>
+    <string name="settings_miui_support_title">支持MIUI widgets</string>
     <string name="settings_miui_v5_summary">如果你是使用MIUI v5 ROM請務必打開</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_moon_phases_title">月亮變化</string>
     <string name="settings_notification_color_title">狀態欄的標誌顏色</string>
     <string name="settings_notification_summary">在通知區域中顯示當前天氣狀況</string>
-    <string name="settings_notification_text_color_summary">通知文字和圖標的顏色</string>
+    <string name="settings_notification_text_color_summary">通知欄文字和圖標的顏色</string>
     <string name="settings_notification_title">顯示通知</string>
     <string name="settings_notification_type">通知類型</string>
     <string name="settings_show_info_summary">顯示或隱藏界面</string>
@@ -187,7 +191,7 @@
     <string name="settings_update_autoupdate_summary">自動更新天氣預報</string>
     <string name="settings_update_autoupdate_title">自動更新</string>
     <string name="settings_update_interval_title">更新間隔</string>
-    <string name="settings_update_roaming_summary">即使在漫遊時自動更新天氣預報。注意，您的手機帳單會有一個額外的費用。</string>
+    <string name="settings_update_roaming_summary">即使在漫遊時自動更新天氣預報。注意，您的手機帳單會有一個額外的費用</string>
     <string name="settings_update_roaming_title">漫遊狀態下更新</string>
     <string name="settings_update_wake_title">喚醒設備</string>
     <string name="settings_update_wifi_only_summary">建立Wi-Fi連接時自動更新天氣預報</string>
@@ -198,16 +202,16 @@
     <string name="settings_widgets_click_date_summary">點擊widgets時啟動日期app</string>
     <string name="settings_widgets_click_date_title">點擊日期</string>
     <string name="settings_widgets_click_weather_summary">widgets啟動app時按一下預測面積(溫度)</string>
-    <string name="settings_widgets_click_weather_title">點擊預測</string>
+    <string name="settings_widgets_click_weather_title">點擊預報</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
-    <string name="settings_widgets_widget4x1_data_title">額外資料</string>
+    <string name="settings_widgets_widget4x1_data_title">額外訊息</string>
     <string name="settings_widgets_widget4x1_transparent_sum">未選中默認背景</string>
     <string name="settings_widgets_widget4x1_transparent_title">透明背景</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">預設值 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">城市</string>
-    <string name="settings_widgets_widget4x2_clock_font_summary">預設值 50sp</string>
+    <string name="settings_widgets_widget4x2_clock_font_summary">預設值50sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">時鐘</string>
     <string name="settings_widgets_widget4x2_custom_font_summary">自定義widget字體大小</string>
     <string name="settings_widgets_widget4x2_custom_font_title">自定義字體大小</string>
@@ -248,6 +252,7 @@
     <string name="visibility_units_m">" 米"</string>
     <string name="visibility_units_mi">" 英里"</string>
     <string name="weather_feel">"體感溫度: "</string>
+    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"濕度: "</string>
     <string name="weather_no_city">沒有城市</string>
     <string name="weather_no_data">沒有天氣資料</string>
@@ -280,7 +285,7 @@
     <string name="wind_sse">S-SE</string>
     <string name="wind_ssw">S-SW</string>
     <string name="wind_sw">SW</string>
-    <string name="wind_variable">變數</string>
+    <string name="wind_variable">變化</string>
     <string name="wind_w">W</string>
     <string name="wind_wnw">W-NW</string>
     <string name="wind_wsw">W-SW</string>
