--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -8,8 +8,9 @@
     <string name="about_for_translators">Çevirmenler için:</string>
     <string name="about_for_translators_text">Eğer uygulamayı kendi dilinize çevirmek isterseniz, Github sayfasında tüm kaynakları bulabilirsiniz</string>
     <string name="about_hailstone">Dolu</string>
-    <string name="about_heavy_snow">Kar</string>
-	<string name="about_haze">Bulanık</string> 
+    <string name="about_haze">Bulanık</string> 
+	<string name="about_heavy_rain">Şiddetli Yağmur</string>
+	<string name="about_heavy_snow">Şiddetli Kar</string>
     <string name="about_light_rain">Hafif Yağmur</string>
     <string name="about_light_snow">Hafif Kar</string>
     <string name="about_overcast">Kapalı</string>
@@ -21,12 +22,16 @@
     <string name="about_sleet">Karla karışık yağmur</string>
 	<string name="about_snow_showers">Sağanak Kar Yağışı</string>
 	<string name="about_moderate_snow">Hafif Kar Yağışı</string>
+	<string name="about_rainstorm">Yağmur Fırtınası</string>    
+	<string name="about_rain_drizzle">Yağmur Çiseleme</string> 
+	<string name="about_sleet">Karla karışık yağmur</string>
     <string name="about_social">Sosyal linkler:</string>
     <string name="about_sunny">Açık</string>
     <string name="about_t_storms">Fırtına</string>
     <string name="about_version">Sürüm:</string>
+    <string name="action_bar_selected_format">Seçilen: %d</string>
     <string name="app_name">Weather BZ</string>
-	<string name="applying_theme">Tema uygulanıyor\u2026</string>
+	<string name="applying_theme">Tema uygulanıyor...\u2026</string>
     <string name="btn_add_location">Konum ekle</string>
 	<string name="btn_apply_theme">Temayı uygula</string> 
     <string name="btn_delete_location">Konumu sil</string>
@@ -102,9 +107,57 @@
     <string name="forecast_sunny">Güneşli</string>
     <string name="forecast_thunderstorm">Gök Gürültülü Sağanak</string>
     <string name="forecast_windy">Rüzgar</string>
+    <string name="fetching_location">Konumunuz alınıyor...\u2026</string>
+	<string name="forecast_chance_of_rain">Yağmur Olasılığı</string>
+    <string name="forecast_chance_of_showers">Sağanak Olasılığı</string>
+    <string name="forecast_chance_of_snow">Kar Olasılığı</string>
+    <string name="forecast_chance_of_snow_showers">Sağanak Kar Olasılığı</string>
+    <string name="forecast_chance_of_storm">Fırtına Olasılığı</string>
+    <string name="forecast_chance_of_tstorm">Gök gürültülü fırtına</string>
+	<string name="forecast_clear">Açık</string>
+    <string name="forecast_cloudy">Bulutlu</string>
+    <string name="forecast_cold">Soğuk</string>
+    <string name="forecast_drizzle">Çiseleme</string>
+    <string name="forecast_cloudy_snow">Kar</string>
+    <string name="forecast_dust">Toz</string>
+    <string name="forecast_fair">Güzel</string>
+    <string name="forecast_flurries">Kısa ve şiddetli yağış</string>
+    <string name="forecast_fog">Sis</string>
+    <string name="forecast_freezing_drizzle">Soğuk ve çiseleme</string>
+    <string name="forecast_freezing_rain">Suğuk ve yağmur</string>
+    <string name="forecast_haze">Pus</string>
+    <string name="forecast_hail">Dolu</string>
+    <string name="forecast_hot">Sıcak</string>
+    <string name="forecast_heavy_rain">Şiddetli yağmur</string>
+    <string name="forecast_icy">Buzlu</string>
+    <string name="forecast_light_rain">Hafif yağmur</string>
+    <string name="forecast_light_snow">Hafif kar</string>
+    <string name="forecast_mist">Sisli</string>
+    <string name="forecast_mostly_cloudy">Parçalı Bulutlu</string>
+    <string name="forecast_mostly_sunny">Çoğunlukla Güneşli</string>
+    <string name="forecast_overcast">Kapalı</string>
+    <string name="forecast_partly_cloudy">Parçalı Bulutlu</string>
+    <string name="forecast_partly_sunny">Çoğunlukla Güneşli</string>
+    <string name="forecast_rain">Yağmur</string>
+    <string name="forecast_rain_and_snow">Yağmur ve kar</string>
+    <string name="forecast_rain_showers">Sağanak yağmur</string>
+    <string name="forecast_sand">Kum tozu</string>
+    <string name="forecast_scattered_showers">Hafif yağmur</string>
+    <string name="forecast_scattered_thunderstorms">Dağınık fırtına</string>
+    <string name="forecast_showers">Sağanak</string>
+    <string name="forecast_sleet">Karla karışık yağmur</string>
+    <string name="forecast_smoke">Dumanlı</string>
+    <string name="forecast_snow">Kar</string>
+    <string name="forecast_snow_showers">Sağanak kar</string>
+    <string name="forecast_snow_storm">KAr fırtınası</string>
+    <string name="forecast_sunny">Açık</string>
+    <string name="forecast_thunderstorm">Fırtına</string>
+    <string name="forecast_thunderstorms">Gök gürültülü fırtına</string>
+    <string name="forecast_tornado">Kasırga</string>
+    <string name="forecast_windy">Rüzgarlı</string>
     <string name="changelog">Değişiklikler</string>
     <string name="just_now">Şimdi</string>
-    <string name="loading">Yükleniyor\u2026</string>
+    <string name="loading">Yükleniyor...\u2026</string>
     <string name="location_edit">Şehir adını girin</string>
     <string name="location_gps">Geçerli konum</string>
     <string name="location_list">Konumlar</string>
@@ -131,7 +184,7 @@
     <string name="moon_waningcrescent">Hilal</string>
     <string name="moon_current_view">Gösterme modu: %s</string>
     <string name="moon_illuminated">Işıklılık</string>
-    <string name="moon_since">Начиная с</string>
+    <string name="moon_since">Beri</string>
     <string name="network_error">Sunucuya bağlanılamadı.\nAğ ayarlarını kontrol edin.</string>
     <string name="new_version">Yeni Sürüm</string>
     <string name="no_provider">Konum kullanılamaz\nKonumu elle ayarlayın</string>
@@ -236,7 +289,7 @@
     <string name="themes_temperature_icons">Sıcaklık simgeleri</string>
     <string name="themes_weather_animation">Hava durumu animasyonları</string>
     <string name="themes_weather_icons">Hava durumu simgeleri</string>
-    <string name="updating">Güncelleniyor\u2026</string> 
+    <string name="updating">Güncelleniyor...\u2026</string> 
     <string name="upgrade">Güncelle</string>
     <string name="visibility_units">Görüş mesafesi birimleri</string>
     <string name="visibility_units_km">" km"</string>
@@ -246,10 +299,12 @@
     <string name="weather_humidity">"Nem: "</string>
     <string name="weather_no_city">Şehir yok</string>
     <string name="weather_no_data">Hava durumu verisi yok!</string>
+    <string name="weather_no_city">Şehir ayarlı değil</string>
+	<string name="weather_no_data">Veri yok</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Basınç: "</string>
-    <string name="weather_sunrize">"GünDoğumu: "</string>
-    <string name="weather_sunset">"GünBatımı: "</string>
+    <string name="weather_sunrize">"Gün Doğumu: "</string>
+    <string name="weather_sunset">"Gün Batımı: "</string>
     <string name="weather_visibility">"Görüş mesafesi: "</string>
     <string name="weather_wind">"Rüzgar: "</string>
     <string name="widget_name_large">(4x2)Weather BZ</string>
