--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -238,11 +238,11 @@
     <string name="weather_sunset">"Napnyugta: "</string>
     <string name="weather_visibility">"Látótávolság: "</string>
     <string name="weather_wind">"Szél: "</string>
-    <string name="widget_name_large_v5">Időjárás Miui V5 (4x2)</string>
-    <string name="widget_name_large">Időjárás 4x2</string>
-    <string name="widget_name_medium_ext">Időjárás 4x1</string>
-    <string name="widget_name_medium_v5">Időjárás Miui V5 (4x1)</string>
-    <string name="widget_name_medium">Időjárás 4x1</string>
+    <string name="widget_name_4x2_v5">Időjárás Miui V5 (4x2)</string>
+    <string name="widget_name_4x2">Időjárás 4x2</string>
+    <string name="widget_name_4x1_ext">Időjárás 4x1</string>
+    <string name="widget_name_4x1_v5">Időjárás Miui V5 (4x1)</string>
+    <string name="widget_name_4x1">Időjárás 4x1</string>
     <string name="widget_text_color_summary">Widgetek szöveg színe</string>
     <string name="wind_e">K</string>
     <string name="wind_ene">K-ÉK</string>
