--- a/res/values-id/strings.xml
+++ b/res/values-id/strings.xml
@@ -25,10 +25,10 @@
 <string name="settings_check_updates_summary">Cek untuk pembaharuan saat aplikasi mulai jalan</string>
 <string name="settings_category_app_update">Pembaharuan aplikasi</string>
 <string name="settings_category_forecast_update">Pembaharuan perkiraan </string>
-<string name="widget_name_medium">Weather BZ 4x1</string>
-<string name="widget_name_medium_ext">Weather BZ 4x1</string>
-<string name="widget_name_large">Weather BZ 4x2</string>
-<string name="widget_name_large_v5">Weather BZ 4x2</string>
+<string name="widget_name_4x1">Weather BZ 4x1</string>
+<string name="widget_name_4x1_ext">Weather BZ 4x1</string>
+<string name="widget_name_4x2">Weather BZ 4x2</string>
+<string name="widget_name_4x2_v5">Weather BZ 4x2</string>
 <string name="about_version">Versi:</string>
 <string name="about_author">Pembuat:</string>
 <string name="about_social">Link sosial:</string>
