--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -24,10 +24,10 @@ Lo apprezzo molto!"</string>
     <string name="settings_check_updates_summary">"Controlla aggiornamenti all'avvio"</string>
     <string name="settings_category_app_update">Application update</string>
     <string name="settings_category_forecast_update">Forecast update</string>
-    <string name="widget_name_medium">Weather BZ 4x1</string>
-    <string name="widget_name_medium_ext">Weather BZ 4x1</string>
-    <string name="widget_name_large">Weather BZ 4x2</string>
-    <string name="widget_name_large_v5">Weather BZ 4x2</string>
+    <string name="widget_name_4x1">Weather BZ 4x1</string>
+    <string name="widget_name_4x1_ext">Weather BZ 4x1</string>
+    <string name="widget_name_4x2">Weather BZ 4x2</string>
+    <string name="widget_name_4x2_v5">Weather BZ 4x2</string>
     <string name="about_version">Versione:</string>
     <string name="about_author">Autore:</string>
     <string name="about_sunny">Soleggiato</string>
@@ -143,7 +143,7 @@ Lo apprezzo molto!"</string>
     <string name="settings_widgets_click_clock_summary">"Scegli l'applicazione da lanciare al click sull'orologio nei widget"</string>
     <string name="settings_widgets_click_weather_title">Click sul meteo</string>
     <string name="settings_widgets_click_weather_summary">"Scegli l'applicazione da lanciare al click sul meteo nei widget (temperatura)"</string>
-    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_desc_font_title">Descrizione Meteo</string>
     <string name="settings_widgets_widget4x2_desc_font_summary">Valore default 22sp</string>
     <string name="settings_widgets_widget4x2_clock_font_title">Orologio</string>
