--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -199,12 +199,16 @@
     <string name="settings_widgets_click_date_title">Нажатие на дату</string>
     <string name="settings_widgets_click_weather_summary">Выбор приложения для запуска по нажатию на прогноз</string>
     <string name="settings_widgets_click_weather_title">Нажатие на прогноз</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Удалить ноль в часах</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Удаляет первый ноль в часах виджета</string>
+    <string name="settings_widgets_local_time_title">Локальное время</string>
+    <string name="settings_widgets_local_time_summary">Использовать локальное время города на виджетах</string>
     <string name="settings_widgets_widget4x1">Виджет 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Дополнительные данные</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона по умолчанию</string>
     <string name="settings_widgets_widget4x1_transparent_title">Прозрачный фон</string>
     <string name="settings_widgets_widget4x1_v5">Виджет 4x1 (v5)</string>
-    <string name="settings_widgets_widget4x2">Виджет 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x2">Виджет 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">По умолчанию 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Город</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">По умолчанию 50sp</string>
@@ -256,11 +260,12 @@
     <string name="weather_sunset">"Закат: "</string>
     <string name="weather_visibility">"Видимость: "</string>
     <string name="weather_wind">"Ветер: "</string>
-    <string name="widget_name_large">Погода BZ 4x2</string>
-    <string name="widget_name_large_v5">Погода BZ 4x2 v5</string>
-    <string name="widget_name_medium">Погода BZ 4x1</string>
-    <string name="widget_name_medium_ext">Погода BZ 4x1</string>
-    <string name="widget_name_medium_v5">Погода BZ 4x1</string>
+    <string name="widget_name_4x3">(4x3)Погода BZ</string>
+    <string name="widget_name_4x2">(4x2)Погода BZ</string>
+    <string name="widget_name_4x2_v5">(4x2 v5)Погода BZ</string>
+    <string name="widget_name_4x1">(4x1)Погода BZ</string>
+    <string name="widget_name_4x1_ext">(4x1 ext)Погода BZ</string>
+    <string name="widget_name_4x1_v5">(4x1 v5)Погода BZ</string>
     <string name="widget_text_color_summary">Цвет текста виджета</string>
     <string name="wind_e">В</string>
     <string name="wind_ene">В-СВ</string>
