--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -8,32 +8,32 @@
     <string name="about_for_translators">Çevirmenler için:</string>
     <string name="about_for_translators_text">Eğer uygulamayı kendi dilinize çevirmek isterseniz, Github sayfasında tüm kaynakları bulabilirsiniz</string>
     <string name="about_hailstone">Dolu</string>
-    <string name="about_haze">Bulanık</string> 
-	<string name="about_heavy_rain">Şiddetli Yağmur</string>
-	<string name="about_heavy_snow">Şiddetli Kar</string>
+    <string name="about_haze">Bulanık</string>
+    <string name="about_heavy_rain">Şiddetli Yağmur</string>
+    <string name="about_heavy_snow">Şiddetli Kar</string>
     <string name="about_light_rain">Hafif Yağmur</string>
     <string name="about_light_snow">Hafif Kar</string>
     <string name="about_overcast">Kapalı</string>
-	<string name="about_rain_drizzle">Sağanak Yağmur</string>
-	<string name="about_heavy_rain">Şiddetli Yağmur</string>
+    <string name="about_rain_drizzle">Sağanak Yağmur</string>
+    <string name="about_heavy_rain">Şiddetli Yağmur</string>
     <string name="about_moderate_rain">Hafif Sağanak Yağmur</string>
     <string name="about_rainstorm">Yağmur Fırtınası</string>
     <string name="about_rain_drizzle">Sağanak</string>
     <string name="about_sleet">Karla karışık yağmur</string>
-	<string name="about_snow_showers">Sağanak Kar Yağışı</string>
-	<string name="about_moderate_snow">Hafif Kar Yağışı</string>
-	<string name="about_rainstorm">Yağmur Fırtınası</string>    
-	<string name="about_rain_drizzle">Yağmur Çiseleme</string> 
-	<string name="about_sleet">Karla karışık yağmur</string>
+    <string name="about_snow_showers">Sağanak Kar Yağışı</string>
+    <string name="about_moderate_snow">Hafif Kar Yağışı</string>
+    <string name="about_rainstorm">Yağmur Fırtınası</string>
+    <string name="about_rain_drizzle">Yağmur Çiseleme</string>
+    <string name="about_sleet">Karla karışık yağmur</string>
     <string name="about_social">Sosyal linkler:</string>
     <string name="about_sunny">Açık</string>
     <string name="about_t_storms">Fırtına</string>
     <string name="about_version">Sürüm:</string>
     <string name="action_bar_selected_format">Seçilen: %d</string>
     <string name="app_name">Weather BZ</string>
-	<string name="applying_theme">Tema uygulanıyor...\u2026</string>
+    <string name="applying_theme">Tema uygulanıyor\u2026</string>
     <string name="btn_add_location">Konum ekle</string>
-	<string name="btn_apply_theme">Temayı uygula</string> 
+    <string name="btn_apply_theme">Temayı uygula</string>
     <string name="btn_delete_location">Konumu sil</string>
     <string name="cancel">İptal</string>
     <string name="clear_miui_data">MIUI verilerini sil</string>
@@ -79,7 +79,7 @@
     <string name="forecast_flurries">Kısa Süreli Yağış</string>
     <string name="forecast_fog">Sis</string>
     <string name="forecast_freezing_drizzle">Hafif Dolu</string>
-	<string name="forecast_freezing_rain">Dondurucu Yağmur</string>
+    <string name="forecast_freezing_rain">Dondurucu Yağmur</string>
     <string name="forecast_hail">Dolu</string>
     <string name="forecast_haze">Hafif Sis</string>
     <string name="forecast_heavy_rain">Sağanak Yağmur</string>
@@ -95,7 +95,7 @@
     <string name="forecast_rain">Yağmur</string>
     <string name="forecast_rain_and_snow">Kar ve Yağmur</string>
     <string name="forecast_rain_showers">Yağmur Yağışı</string>
-	<string name="forecast_sand">Kum</string>
+    <string name="forecast_sand">Kum</string>
     <string name="forecast_scattered_showers">Aralıklı Sağanak Yağış</string>
     <string name="forecast_scattered_thunderstorms">Aralıklı Gök gürültülü</string>
     <string name="forecast_showers">Yağışlı</string>
@@ -103,18 +103,18 @@
     <string name="forecast_smoke">Dumanlı</string>
     <string name="forecast_snow">Kar</string>
     <string name="forecast_snow_showers">Yoğun Kar Yağışı</string>
-	<string name="forecast_snow_storm">Kar fırtınası</string>
+    <string name="forecast_snow_storm">Kar fırtınası</string>
     <string name="forecast_sunny">Güneşli</string>
     <string name="forecast_thunderstorm">Gök Gürültülü Sağanak</string>
     <string name="forecast_windy">Rüzgar</string>
     <string name="fetching_location">Konumunuz alınıyor...\u2026</string>
-	<string name="forecast_chance_of_rain">Yağmur Olasılığı</string>
+    <string name="forecast_chance_of_rain">Yağmur Olasılığı</string>
     <string name="forecast_chance_of_showers">Sağanak Olasılığı</string>
     <string name="forecast_chance_of_snow">Kar Olasılığı</string>
     <string name="forecast_chance_of_snow_showers">Sağanak Kar Olasılığı</string>
     <string name="forecast_chance_of_storm">Fırtına Olasılığı</string>
     <string name="forecast_chance_of_tstorm">Gök gürültülü fırtına</string>
-	<string name="forecast_clear">Açık</string>
+    <string name="forecast_clear">Açık</string>
     <string name="forecast_cloudy">Bulutlu</string>
     <string name="forecast_cold">Soğuk</string>
     <string name="forecast_drizzle">Çiseleme</string>
@@ -157,20 +157,20 @@
     <string name="forecast_windy">Rüzgarlı</string>
     <string name="changelog">Değişiklikler</string>
     <string name="just_now">Şimdi</string>
-    <string name="loading">Yükleniyor...\u2026</string>
+    <string name="loading">Yükleniyor\u2026</string>
     <string name="location_edit">Şehir adını girin</string>
     <string name="location_gps">Geçerli konum</string>
     <string name="location_list">Konumlar</string>
     <string name="location_search">Konumu ara</string>
     <string name="main_screen_text_color_summary">Ana ekran yazı renkleri</string>
     <string name="menu">Menü</string>
-	<string name="menu_delete_theme">Temayı sil</string>
+    <string name="menu_delete_theme">Temayı sil</string>
     <string name="menu_hourly">Saatlik</string>
-	<string name="menu_import">Temayı hafıza biriminden yükle</string>
+    <string name="menu_import">Temayı hafıza biriminden yükle</string>
     <string name="menu_locations">Konumlar</string>
     <string name="menu_moon_phases">Ay Evreleri</string>
     <string name="menu_settings">Ayarlar</string>
-	<string name="menu_themes">Temalar</string> 
+    <string name="menu_themes">Temalar</string>
     <string name="menu_trend">Trend</string>
     <string name="menu_update">Güncelle</string>
     <string name="moon_age"> %s gün</string>
@@ -215,7 +215,7 @@
     <string name="settings_category_update_sum">Otomatik güncelleme ayarları</string>
     <string name="settings_category_widgets">Widget</string>
     <string name="settings_category_widgets_sum">Widget görünüm ve tıklama eylemleri</string>
-	<string name="settings_citydb_provider">Şehir Sağlayıcısı</string>
+    <string name="settings_citydb_provider">Şehir Sağlayıcısı</string>
     <string name="settings_click_actions">Tıklama eylemleri</string>
     <string name="settings_check_updates_summary">uygulama başlayınca güncellemeleri kontrol eder</string>
     <string name="settings_check_updates_title">Güncelleme kontrolü</string>
@@ -252,7 +252,7 @@
     <string name="settings_widgets_widget4x1_transparent_sum">Varsayılan arka plan için; işaretlenmemiş</string>
     <string name="settings_widgets_widget4x1_transparent_title">Transparan arka plan</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
-    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Varsayılan 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Şehir</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Varsayılan 50sp</string>
@@ -289,7 +289,7 @@
     <string name="themes_temperature_icons">Sıcaklık simgeleri</string>
     <string name="themes_weather_animation">Hava durumu animasyonları</string>
     <string name="themes_weather_icons">Hava durumu simgeleri</string>
-    <string name="updating">Güncelleniyor...\u2026</string> 
+    <string name="updating">Güncelleniyor\u2026</string>
     <string name="upgrade">Güncelle</string>
     <string name="visibility_units">Görüş mesafesi birimleri</string>
     <string name="visibility_units_km">" km"</string>
@@ -300,18 +300,18 @@
     <string name="weather_no_city">Şehir yok</string>
     <string name="weather_no_data">Hava durumu verisi yok!</string>
     <string name="weather_no_city">Şehir ayarlı değil</string>
-	<string name="weather_no_data">Veri yok</string>
+    <string name="weather_no_data">Veri yok</string>
     <string name="weather_no_temp_data">-°</string>
     <string name="weather_pressure">"Basınç: "</string>
     <string name="weather_sunrize">"Gün Doğumu: "</string>
     <string name="weather_sunset">"Gün Batımı: "</string>
     <string name="weather_visibility">"Görüş mesafesi: "</string>
     <string name="weather_wind">"Rüzgar: "</string>
-    <string name="widget_name_large">(4x2)Weather BZ</string>
-    <string name="widget_name_large_v5">(4x2 v5)Weather BZ</string>
-    <string name="widget_name_medium">(4x1)Weather BZ</string>
-    <string name="widget_name_medium_ext">(4x1 ext)Weather BZ</string>
-    <string name="widget_name_medium_v5">(4x1 v5)Weather BZ</string>
+    <string name="widget_name_4x2">(4x2)Weather BZ</string>
+    <string name="widget_name_4x2_v5">(4x2 v5)Weather BZ</string>
+    <string name="widget_name_4x1">(4x1)Weather BZ</string>
+    <string name="widget_name_4x1_ext">(4x1 ext)Weather BZ</string>
+    <string name="widget_name_4x1_v5">(4x1 v5)Weather BZ</string>
     <string name="widget_text_color_summary">"Widget yazı rekleri"</string>
     <string name="wind_e">D</string>
     <string name="wind_ene">D-KD</string>
