--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -203,12 +203,16 @@
     <string name="settings_widgets_click_date_title">Click on Date</string>
     <string name="settings_widgets_click_weather_summary">The app to start by clicking on widgets forecast area (temperature)</string>
     <string name="settings_widgets_click_weather_title">Click on Forecast</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Remove leading zero</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Removes the leading zero in hours</string>
+    <string name="settings_widgets_local_time_title">Local Time</string>
+    <string name="settings_widgets_local_time_summary">Use city local time in widgets</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Extended data</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background</string>
     <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
-    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Default value 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">City</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Default value 50sp</string>
@@ -262,11 +266,12 @@
     <string name="weather_sunset">"Sunset: "</string>
     <string name="weather_visibility">"Visibility: "</string>
     <string name="weather_wind">"Wind: "</string>
-    <string name="widget_name_large">(4x2)Weather BZ</string>
-    <string name="widget_name_large_v5">(4x2 v5)Weather BZ</string>
-    <string name="widget_name_medium">(4x1)Weather BZ</string>
-    <string name="widget_name_medium_ext">(4x1 ext)Weather BZ</string>
-    <string name="widget_name_medium_v5">(4x1 v5)Weather BZ</string>
+    <string name="widget_name_4x3">(4x3)Weather BZ</string>
+    <string name="widget_name_4x2">(4x2)Weather BZ</string>
+    <string name="widget_name_4x2_v5">(4x2 v5)Weather BZ</string>
+    <string name="widget_name_4x1">(4x1)Weather BZ</string>
+    <string name="widget_name_4x1_ext">(4x1 ext)Weather BZ</string>
+    <string name="widget_name_4x1_v5">(4x1 v5)Weather BZ</string>
     <string name="widget_text_color_summary">"The widget's text color"</string>
     <string name="wind_e">E</string>
     <string name="wind_ene">E-NE</string>
